# 5tran

./: .dockerignore  .gcloudignore  .gitignore  BUILD_SUMMARY.md  CONTAINER_SUMMARY.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP.md  VERIFICATION_CHECKLIST.md  app.py  cloudbuild.yaml  deploy.sh  install.sh  main.py  pyproject.toml
.cursor/rules/: project.mdc  roles.mdc  rules.mdc
configs/: README.md
dbt_project/: .gitkeep  dbt_project.yml  profiles.yml
examples/: EXAMPLES.md  README.md  complete_example.py  ecommerce_api.json  github_api.json  github_api.yaml  github_example.py  saas_metrics_api.yaml  ui_example.md
scripts/: create_fivetran_group.py  deploy_connector.py  get_group_id.py  list_fivetran_groups.py  run.sh  setup.sh  test_pipeline.py
src/: __init__.py  config.py  orchestrator.py
src/agent/: __init__.py  gemini_agent.py
src/agents/: agents.py  config.py  connector_template.py
src/agents/tools/: firecrawl_tool.py
src/cli/: __init__.py  main.py
src/cli/commands/: __init__.py  deploy.py  generate.py  status.py
src/connectors/: __init__.py  connector_generator.py  fivetran_api_client.py  fivetran_manager.py  fivetran_sdk_generator.py  openapi_parser.py
src/connectors/asianews01/: README.md
src/connectors/googlenews/: README.md
src/connectors/newsai/: README.md  requirements.txt
src/connectors/newsscraper/: README.md  requirements.txt
src/transformations/: __init__.py  dbt_generator.py
src/ui/: __init__.py  app.py
src/warehouse/: __init__.py  bigquery_manager.py
