[project]
name = "5tran"
version = "0.1.0"
description = "Data pipeline automation from OpenAPI to BigQuery via Fivetran"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-bigquery>=1.10.2",
    "dbt-core>=1.10.8",
    "fivetran>=0.7.0",
    "google-cloud-bigquery>=3.38.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "textual>=0.47.0",
]

[project.scripts]
5tran = "src.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
