[project]
name = "5tran"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fivetran-connector-sdk>=2.0.0",
    "google-adk>=1.17.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.49.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "firecrawl-py",
    "pydantic",
]
